--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -160,7 +160,7 @@ In the example above we see, that all cells containing `sex=="female" no perturb
 Function `ck_cnt_measures()` applied to the resulting object of `perturbTable()` allows to compute information loss measures for perturbed count variables. Its application is as simple as:
 
 ```{r}
-infoloss <- ck_cnt_measures(tab1, countvar="Total")
+infoloss <- ck_cnt_measures(tab1, vname="Total")
 ```
 
 This function returns a list with the following elements:
