--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,20 @@
+---
+output: github_document
+---
+
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
+
 ## cellKey
+
+[![Travis build status](https://travis-ci.org/sdcTools/cellKey.svg?branch=master)](https://travis-ci.org/sdcTools/cellKey) [![Coverage status](https://codecov.io/gh/sdcTools/cellKey/branch/master/graph/badge.svg)](https://codecov.io/github/sdcTools/cellKey?branch=master) [![Binder](http://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/sdcTools/cellKey/master)
+
 
 an **R** package for applying noise to statistical tables. 
 
