--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -42,9 +42,10 @@ packageVersion("cellKey")
 The testdata set we are using in this example contains information on person-level along with sampling weights as well as some categorical and continuously scaled variables. We also compute some binary variables for which we also want to create perturbed tables.
 
 ```{r}
-dat <- ck_create_testdata()[,c("sex","age","savings","income","sampling_weight")]
-dat[,cnt_males:=ifelse(sex=="male", 1, 0)]
-dat[,cnt_highincome:=ifelse(income>=9000, 1, 0)]
+dat <- ck_create_testdata()
+dat <- dat[, c("sex", "age", "savings", "income", "sampling_weight")]
+dat[, cnt_males := ifelse(sex == "male", 1, 0)]
+dat[, cnt_highincome := ifelse(income >= 9000, 1, 0)]
 ```
 
 The goal of this introduction is to create a perturbed table of counts of variables `sex` by `age` for all observations as well as for the subgroups in `cnt_males` and `cnt_highincome` that are non-zero. We also want to create perturbed tables of continously scaled variables `savings` and `income` also giving the hierarchical structure defined by `sex` by `age`.
@@ -55,11 +56,17 @@ The first step in this approach is to generate or rather set some parameters tha
 ```{r}
 # note:  ptable::pt_create_pTable(...) could also be used as input for argument "pTable"
 pert_params <- ck_create_pert_params(
-  bigN=17312941, 
-  smallN=12,
-  pTable=ck_create_pTable(D=5, V=3, pTableSize=70, type="abs"),
-  sTable=ck_generate_sTable(smallC=12), 
-  mTable=c(0.6,0.4,0.2))
+  bigN = 17312941, 
+  smallN = 12,
+  pTable = ck_create_pTable(
+    D = 5, 
+    V = 3, 
+    pTableSize = 70, 
+    type = "abs"
+  ),
+  sTable = ck_generate_sTable(smallC=12), 
+  mTable = c(0.6, 0.4, 0.2)
+)
 ```
 
 The parameters that have to be specified are:
@@ -74,9 +81,10 @@ This function returns an object of class `pert_params` that is required in the n
 
 ```{r}
 inp <- ck_create_input(
-  dat=dat, 
-  def_rkey=15*nrow(dat), 
-  pert_params=pert_params)
+  dat = dat, 
+  def_rkey = 15 * nrow(dat), 
+  pert_params = pert_params
+)
 print(class(inp))
 ```
 
@@ -88,10 +96,16 @@ To ensure that the same record keys are computed each and every time for the sam
 The next step is to define hierarchies for each of the classifying variables. There are two ways how the hierarchical structure of these variables (including sub-totals) can be specified. The first way is the same as dimensions have to be specified in package **sdcTable**. We give an example for the categorical variables `age` and `sex` below:
 
 ```{r}
-dim.sex <- data.table(levels=c("@","@@","@@"), codes=c("Total", "male", "female"))
+dim.sex <- data.table(
+  levels = c("@", "@@", "@@"), 
+  codes = c("Total", "male", "female")
+)
 print(dim.sex)
 
-dim.age <- data.table(levels=c("@",rep("@@", 6)), codes=c("Total", paste0("age_group",1:6)))
+dim.age <- data.table(
+  levels = c("@", rep("@@", 6)), 
+  codes = c("Total", paste0("age_group", 1:6))
+)
 print(dim.age)
 ```
 
@@ -100,15 +114,23 @@ Each hierarchy is represented with a `data.frame` or `data.table` holding two va
 An alternative way (available from versions `>=0.9.0`) is to use functions `ck_create_node()`, `ck_add_nodes()` and `ck_delete_nodes()` to build the hierarchies. These functions make use of functionality available in the [**data.tree**](https://cran.r-project.org/package=data.tree) package and return a tree-like structure. **cellKey** will internally convert input provided in such format automatically into the format used in [**sdcTable**](https://cran.r-project.org/package=sdcTable). We now show the alternative way on how to specify the hierarchies for variables `sex`:
 
 ```{r}
-dim.sex2 <- ck_create_node(total_lab="Total")
-dim.sex2 <- ck_add_nodes(dim.sex2, reference_node="Total", node_labs=c("male","female"))
+dim.sex2 <- ck_create_node(total_lab = "Total")
+dim.sex2 <- ck_add_nodes(
+  dim.sex2, 
+  reference_node = "Total", 
+  node_labs = c("male", "female")
+)
 print(dim.sex2)
 ```
 
 For variable `age` the process is quite similar:
 ```{r}
-dim.age2 <- ck_create_node(total_lab="Total")
-dim.age2 <- ck_add_nodes(dim.age2, reference_node="Total", node_labs=paste0("age_group",1:6))
+dim.age2 <- ck_create_node(total_lab = "Total")
+dim.age2 <- ck_add_nodes(
+  dim.age2, 
+  reference_node = "Total", 
+  node_labs = paste0("age_group", 1:6)
+)
 print(dim.age2)
 ```
 
@@ -119,7 +141,7 @@ All hierarchy specifications must then be combined into a named list where the n
 ```{r}
 # dim.sex was created the "sdcTable-way"
 # dim.age2 was created with the more dynamic way 
-dimList <- list(sex=dim.sex, age=dim.age2)
+dimList <- list(sex = dim.sex, age = dim.age2)
 print(dimList)
 ```
 
@@ -135,17 +157,21 @@ It is now possible to finally compute perturbed tables using function `perturbTa
 If both `countVars` and `numVars` are not specified, the perturbed count table based on all units is computed. Below it is shown, how a count table using existing sampling weights (available in variable `sampling_weight` in the input data) can be computed:
 
 ```{r}
-tab1 <- perturbTable(inp=inp, dimList=dimList, countVars=c("cnt_males", "cnt_highincome"), 
-  weightVar="sampling_weight", numVars=NULL)
-print(tab1) # custom print method
-# print(tab1, vname="Total")
+tab1 <- perturbTable(
+  inp = inp, 
+  dimList = dimList, 
+  countVars = c("cnt_males", "cnt_highincome"), 
+  weightVar = "sampling_weight", 
+  numVars = NULL
+)
+print(tab1)
 ```
 
 Applying method `ck_freq_table()` to an output object of `perturbTable()` returns a `data.table` with all combinations of the dimensional variables `sex` and `age` as well as original and perturbed (un)weighted values are returned. In any case, the tabulation of all observations can be extracted (`vnames="Total"`). If additional variables have been specified in argument `countVars`, these can be queried too as shown below:
 
 ```{r}
 ck_freq_table(tab1) # show which tables have been generated
-ck_freq_table(tab1, vname="cnt_males")
+ck_freq_table(tab1, vname = "cnt_males")
 ```
 
 In the example above we see, that all cells containing `sex=="female" no perturbation has been applied. The variables on this data set (additional to the dimensional variables) are:
@@ -159,7 +185,7 @@ In the example above we see, that all cells containing `sex=="female" no perturb
 Function `ck_cnt_measures()` applied to the resulting object of `perturbTable()` allows to compute information loss measures for perturbed count variables. Its application is as simple as:
 
 ```{r}
-infoloss <- ck_cnt_measures(tab1, vname="Total")
+infoloss <- ck_cnt_measures(tab1, vname = "Total")
 ```
 
 This function returns a list with the following elements:
@@ -176,14 +202,23 @@ This function returns a list with the following elements:
 The next example shows how to create a perturbed table of continuous data using sampling weights. For this case, we need to specify parameter `numVars` in `perturbTable()`. Note that it is possible, to specify multiple variables at once.
 
 ```{r}
-tab2 <- perturbTable(inp=inp, dimList=dimList,  weightVar="sampling_weight", 
-  countVars=c("cnt_males", "cnt_highincome"), numVars=c("savings","income"))
+tab2 <- perturbTable(
+  inp = inp, 
+  dimList = dimList,  
+  weightVar = "sampling_weight", 
+  countVars = c("cnt_males", "cnt_highincome"), 
+  numVars = c("savings", "income")
+)
 ```
 
 To get information about magnitute tables, function `ck_cont_table()` can be applied to the output of `perturbTable()`. In this case, we can set an additional argument `meanBeforeSum` that is either `TRUE` or `FALSE` and specifies, how the perturbed cell values are computed. Details on this method can be found in *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar) in Section *6.3*.
 
 ```{r}
-p_income <- ck_cont_table(tab2, vname="income", meanBeforeSum=TRUE)
+p_income <- ck_cont_table(
+  tab2, 
+  vname = "income", 
+  meanBeforeSum = TRUE
+)
 p_income
 ```
 
@@ -206,22 +241,30 @@ We see that this `data.table` has the following variables:
 An interesting feature is that one can optionally specify argument `by` in `perturbTable()` which is relevant for the computation of perturbed magnitude tables. The idea is that it allows to compute magnitude tables restricted to some units in the data set. In the following example we show how to create a perturbed table of `savings` for only those observations that have high income (variable `cnt_highincome`).
 
 ```{r}
-tab3 <- perturbTable(inp=inp, dimList=dimList,  
-  weightVar="sampling_weight", 
-  numVars=c("savings"), by="cnt_highincome")
+tab3 <- perturbTable(
+  inp = inp, 
+  dimList = dimList,  
+  weightVar = "sampling_weight", 
+  numVars = c("savings"), 
+  by = "cnt_highincome"
+)
 ```
 
 We note that if the by_variable has been specified, it will be automatically added to `countVars` internally, so we can also use `ck_freq_table()` with the by-variable even it was not explicitely specified in `countVars`.
 
 ```{r}
 # frequency table of the by-variable
-ck_freq_table(tab3, vname="cnt_highincome")
+ck_freq_table(tab3, vname = "cnt_highincome")
 ```
 
 To show the table of variable `savings` we use again `ck_cont_table()`.
  
 ```{r}
-p_savings <- ck_cont_table(tab3, vname="savings", meanBeforeSum=TRUE)
+p_savings <- ck_cont_table(
+  tab3, 
+  vname = "savings", 
+  meanBeforeSum = TRUE
+)
 p_savings
 ```
  
@@ -231,7 +274,7 @@ From the results we can observe that there are no high-income units in the highe
 Using function `ck_export_table()` which can be applied to outputs of `perturbTable()`. This functions returns a simple `data.frames` containing all cells and perturbed (weighted) values for a given perturbed variables. We could apply it to the `Total`-variable as follows
 
 ```{r}
-dt_tot <- ck_export_table(tab3, vname="Total", type="both")
+dt_tot <- ck_export_table(tab3, vname = "Total", type = "both")
 head(dt_tot)
 ```
 
@@ -256,7 +299,7 @@ Finally we note that there are `print` and `summary` methods implemented for obj
 
 ```{r}
 print(tab1)
-print(tab1, vname="Total")
+print(tab1, vname = "Total")
 summary(tab1)
 ```
 
