--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ update.packages(ask = FALSE)
 # install ptable
 install_github(
   repo = "sdcTools/ptable", 
-  dependencies = c("Depends","Imports"), 
+  dependencies = c("Depends", "Imports"), 
   force = TRUE, 
   build_opts = "--build-vignettes"
 )
@@ -47,14 +47,13 @@ httr::set_config(use_proxy(url = "xxx.xxx.xxx.xxx, port = yy))
 ```
 
 ### Usage
-An example using both possible input formats for perturbation tables is given in the main-function of the packge `perturbTable()`
+An example using both possible input formats for perturbation tables is given in the main-function of the package `perturbTable()`. See
 
 ```
-library(cellKey)
-?perturbTable
+?cellKey::perturbTable
 ```
 
-Once finished, the package will also contain a package vignette. The unfinished introduction vignette can be looked at using `cellKey::ck_vignette()` or via the automatically deployed documentation by clicking [**here**](https://sdctools.github.io/cellKey/articles/introduction.html). The complete [**documentation**](https://sdctools.github.io/cellKey/) is also updated automatically and can be browes online.
+The package vignette is currently work-in-progress. It can be looked at using `cellKey::ck_vignette()` or via the automatically deployed documentation by clicking [**here**](https://sdctools.github.io/cellKey/articles/introduction.html). The complete [**documentation**](https://sdctools.github.io/cellKey/) is also updated automatically and can be browsed online.
 
 ### Updates
 Updates/Changes are listed [**here**](https://sdcTools.github.io/cellKey/news/index.html).
